updated images for the 1.7 release

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -150,7 +150,7 @@ sitespeed-result
         The most used assets report show you the most used assets (a.k.a which asset should you start to change for most bang for the money).
         You wil see the following for each asset: the type, the time since last modification, the cache time, the weight and the number of times the asset has been used.</p>
       <p class="image">
-        <img src="/img/assets-1.6.jpg" alt="sitespeed most used asset page" class="img-polaroid"/>
+        <img src="/img/assets-1.7.jpg" alt="sitespeed most used asset page" class="img-polaroid"/>
       </p>
     </div>
   </div>
@@ -163,11 +163,15 @@ sitespeed-result
     <div class="span12">
       <h2 id="page">Full page analyzis</h2>
       <p>
-      Every page that is tested, also get a corresponding html page, where all data is shown. You will see all rules that are below 100, all assets on the page together with the response headers for that asset (click on the magnifier). This example images doesn't show everything, checkout the <a href="/example/">examples</a> section to see how it looks like. 
+      Every page that is tested, also get a corresponding html page, where all data is shown. You will see all rules that are below 100, all assets on the page together with the response headers for that asset (click on the magnifier) and a summary. These example images doesn't show everything, checkout the <a href="/example/">examples</a> section to see how it looks like. 
     </p>
     <p class="image">
       <img src="/img/page-1.6.jpg" alt="sitespeed page page" class="img-polaroid"/>
       </p>
+    <p class="image">
+      <img src="/img/page-1.7-b.jpg" alt="sitespeed page summary" class="img-polaroid"/>
+      </p>
+
     </div>
   </div>
 </div>
