--- a/release-notes/1.7/index.html
+++ b/release-notes/1.7/index.html
@@ -13,15 +13,15 @@ twitterdescription: With the new release you can output JUnit XML, so that that 
 </div>
 
 <h3>Output as JUnit XML</h3>
-<p>Sitespeed can now output JUnit XML that you can use in your continuous integration tool. With that, you can for every build test your site against 
-sitespeed rules! In the  <a href="/documentation/#junit">documentation</a> you will see how to do it for <a href="/documentation/#jenkins">Jenkins</a> & <a href="/documentation/#travis">Travis</a> (Travis don't have full support yet for JUnit XML but you can still make sure that builds get broken if you violate the rules).
+<p>Sitespeed.io can now output JUnit XML that you can use in your continuous integration tool. With that, you can for every build test your site against 
+the rules! In the  <a href="/documentation/#junit">documentation</a> you will see how to do it for <a href="/documentation/#jenkins">Jenkins</a> & <a href="/documentation/#travis">Travis</a> (Travis don't have full support yet for JUnit XML but you can still make sure that builds get broken if you violate the rules).
 </p>
 <p>
-You can specify your own limits of when you want the tests to fail: for the overall score and the limit individual tests. And you can of course skip tests.
+You can specify your own limits of when you want the tests to fail: for the overall score and the limit individual tests. And you can of course skip tests. Using Jenkins, you will get information per page, and per test, so you easy can see what is failing.
 </p>
 
-<h3>Feed sitespeed.io with a list of URL:s instead of crawl a site</h3>
-<p>For some sites, crawling the page isn't the best thing, you want to test a couple of the most used pages (some of them longer down in the path tree), that's why you now can supply a list of url:s to sitespeed to test.
+<h3>Feed sitespeed.io with a list of URL:s instead of a crawl</h3>
+<p>For some sites, crawling the page isn't the best thing, you want to test a couple of the most used pages (some of them longer down in the path tree), so now you can supply a list of url:s to sitespeed to test.
 </p>
 <p>The list is a plain text file with one url on each line. The first url will gave the name of the whole test (= the same as the first url to crawl). The file needs to look like this:
 </p>
@@ -30,16 +30,18 @@ http://peterhedenskog.com/
 http://peterhedenskog.com/work/
 http://peterhedenskog.com/music/
 </pre>
-Check the <a href="/documentation/#run">doc</a> for of how to do it. Heads up: The parameter to supply a file is <strong>f</strong> meaning that the old functionality "follow only the oath when crawling" has changed to <strong>c</strong> so please make sure you change that if you use that functionality.
+Check the <a href="/documentation/#run">doc</a> of how to do it. Heads up: The parameter to supply a file is <strong>f</strong> meaning that the old functionality "follow only the oath when crawling" has changed to parameter <strong>c</strong> so please make sure you change that if you use that functionality.
 
 <h3>Small fixes</h3>
 <ul>
 <li>Page summary: Show the number of domains used for that page</li>
-<li>Page summary: Show the percantage of assets that are cacheable</li>
+<li>Page summary: Show the percentage of assets that are cacheable</li>
 <li>Page summary: Show the amount of assets that don't have an exipre header (will NOT be cached)</li>	
 <li>Page summary: Added new max size of a document for getting a warning, now using stats from HTTPArchive</li>
 <li>Page summary & site summary: Removed prime cache values, they wasn't actually always right</li>
 <li>Removed Yslow rule <em>ynumreq</em> and created three new ones in order to get clearer JUnit xml result (and also only check for sync js): <em>cssnumreq</em>, <em>cssimagesnumreq</em> & <em>jsnumreq</em></li>
+<li>Added average & median number of DOM elements on site summary and specific number on page</li>
+<li>Added response headers info on assets page (missing in last release)</li>
 </ul>  
 
 
@@ -52,5 +54,5 @@ Check the <a href="/documentation/#run">doc</a> for of how to do it. Heads up: T
 </p>
 <hr>
 <p>	
-See the <a href="https://github.com/soulgalore/sitespeed.io/blob/master/CHANGELOG">changelog</a> for changes done in the past and the next <a href="https://github.com/soulgalore/sitespeed.io/issues?milestone=16&state=open">milestone</a> what will come in the next release.
+See the <a href="https://github.com/soulgalore/sitespeed.io/blob/master/CHANGELOG">changelog</a> for changes done in the past and the next <a href="https://github.com/soulgalore/sitespeed.io/issues?milestone=17&state=open">milestone</a> what will come in the next release.
 </p>
