added assets to toc

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -20,6 +20,7 @@ twitterdescription: Add your own rules to sitespeed.io is easy, because of the u
     <li  class="toc"><a href="#summarypage">Site summary page</a></li>
     <li  class="toc"><a href="#pages">Detailed site report</a></li>
     <li class="toc"><a href="#page">Full page analyzis</a></li>
+    <li class="toc"><a href="#assets">Most used assets report</a></li>
   </ul>
   <li class="toc"><a href="#run">How to run sitespeed.io</a></li>
   <li class="toc"><a href="#junit">Generating the JUnit XML for continous integration</a></li>
@@ -144,23 +145,6 @@ sitespeed-result
 <div class="section">
   <div class="row-fluid">
     <div class="span12">
-
-      <h2 id="pages">Most used assets report</h2>
-      <p>
-        The most used assets report show you the most used assets (a.k.a which asset should you start to change for most bang for the money).
-        You wil see the following for each asset: the type, the time since last modification, the cache time, the weight and the number of times the asset has been used.</p>
-      <p class="image">
-        <img src="/img/assets-1.7.jpg" alt="sitespeed most used asset page" class="img-polaroid"/>
-      </p>
-    </div>
-  </div>
-</div>
-
-
-
-<div class="section">
-  <div class="row-fluid">
-    <div class="span12">
       <h2 id="page">Full page analyzis</h2>
       <p>
       Every page that is tested, also get a corresponding html page, where all data is shown. You will see all rules that are below 100, all assets on the page together with the response headers for that asset (click on the magnifier) and a summary. These example images doesn't show everything, checkout the <a href="/example/">examples</a> section to see how it looks like. 
@@ -168,10 +152,26 @@ sitespeed-result
     <p class="image">
       <img src="/img/page-1.6.jpg" alt="sitespeed page page" class="img-polaroid"/>
       </p>
+      <p>Scrolling down you will see the page summary:</p>
     <p class="image">
       <img src="/img/page-1.7-b.jpg" alt="sitespeed page summary" class="img-polaroid"/>
       </p>
 
+    </div>
+  </div>
+</div>
+
+<div class="section">
+  <div class="row-fluid">
+    <div class="span12">
+
+      <h2 id="assets">Most used assets report</h2>
+      <p>
+        The most used assets report show you the most used assets (a.k.a which asset should you start to change for most bang for the money).
+        You wil see the following for each asset: the type, the time since last modification, the cache time, the weight and the number of times the asset has been used.</p>
+      <p class="image">
+        <img src="/img/assets-1.7.jpg" alt="sitespeed most used asset page" class="img-polaroid"/>
+      </p>
     </div>
   </div>
 </div>
