--- a/release-notes/1.7/index.html
+++ b/release-notes/1.7/index.html
@@ -51,7 +51,7 @@ http://peterhedenskog.com/music/
     <div class="thumbnail">
       <a href="expires.jpg"><img src="expires.jpg" alt="No expire header"></a>
       <h4>Missing expire</h4>
-      <p>Show the amount of assets that don't have an exipre header, both on summary and pages summary.</p>
+      <p>Show the amount of assets that don't have an exipre header, both on summary and detailed site report.</p>
     </div>
   </li>
 
