--- a/release-notes/1.7/index.html
+++ b/release-notes/1.7/index.html
@@ -59,7 +59,7 @@ http://peterhedenskog.com/music/
     <div class="thumbnail">
       <a href="cacheable.jpg"><img src="cacheable.jpg" alt="Cached assets"></a>
       <h4>Cached assets</h4>
-      <p>How many of your assets are beeing cached?</p>
+      <p>How many of your assets are being cached?</p>
     </div>
   </li>
 <li class="span3">
