right twitter desc

--- a/release-notes/1.7/index.html
+++ b/release-notes/1.7/index.html
@@ -6,7 +6,7 @@ author: Peter Hedenskog
 keywords: sitespeed.io, release, release-notes, 1.7, jenkins, travis
 nav: 
 image: http://sitespeed.io/img/sitespeed-1.7-twitter.png
-twitterdescription: With the new release you can output JUnit XML, so that that the sitespeed tests can be included in your continuous integration tool.
+twitterdescription: Sitespeed.io + Jenkins = LOVE! Yes, with the new release you can run sitespeed in your continuous integration tool, generating JUnit XML and for sure know when you break the rules!
 ---
 <div class="page-header">
   <h1>Sitespeed.io 1.7 release notes</h1>
