--- a/rules/index.html
+++ b/rules/index.html
@@ -96,7 +96,7 @@ nav: rules
 
   <section id="3rdpartyasync">
      <h3>Load third party JS asynchronously</h3>
-    Always load third party javascript asynchronously. Third parties that will be checked are twitter, facebook, google (api, analythics, ajax), linkedin, disqus, pinterest & jquery. Read more about asynchronously third party scripts 
+    Always load third party javascript asynchronously. Third parties that will be checked are twitter, facebook, google (api, analytics, ajax), linkedin, disqus, pinterest & jquery. Read more about asynchronously third party scripts 
     <a href="http://www.phpied.com/3PO#async" target="_blank">here</a>. This rule is borrowed from Stoyan Stefanov.
 </section>
 
