--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ image: http://sitespeed.io/img/sitespeed-twitter2.gif
     <div class="span6">
       <h2>Analyze your website speed and performance</h2>
       <p>
-        Sitespeed.io is an open source tool that helps you analyze and optimize your website <strong>speed</strong> and <strong>performance</strong> based on <strong>performance best practices</strong>. It will collect data from multiple pages on your website, analyze the pages using performance best practices <a href="/rules/">rules</a> and output the result as HTML-files or JUnit XML. You can see real life examples of analyzed sites <a href="/example/">here</a>.
+        Sitespeed.io is an open source tool that helps you analyze and optimize your website <strong>speed</strong> and <strong>performance</strong> based on <strong>performance best practices</strong>. It collects data from multiple pages on your website, analyze the pages using performance best practices <a href="/rules/">rules</a> and output the result as HTML-files or JUnit XML. You can see real life examples of analyzed sites <a href="/example/">here</a>.
       </p> 
       <p>Sitespeed.io uses up to date performance best practices. For example: investigating the critical rendering path, looking for front end single point of failures and avoid DNS lookups if the page has few requests. See the full list of the <a href="/rules/">rules</a>.
       </p>
